# energyworx-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
application/: settings.py  urls.py
application/core/: __init__.py  apps.py  models.py  urls.py  views.py
application/core/migrations/: 0001_initial.py  0002_alter_shorturl_hit_count.py
application/settings/: test.py
cicd/docker/test_running/: docker-compose.yml
cicd/docker/test_running/entrypoint/: entrypoint-test.sh
cicd/docker/web/: entrypoint.sh
cicd/docker/web/postgres_initdb.d/: init-user-db.sh
tests/mixins/: views.py
tests/views/: creation.py  resolve.py  stats.py
